Bug 1123003 - Clarify the ownership of xptiInterfaceInfo pointers in xptiprivate.h; r=froydnj